[INTGW-720] code review fixes